img ann integration in new image handling

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(GeomTextFixed)
 export(VisiumLarge)
 export(VisiumSmall)
 export(activateImage)
+export(activateImageInt)
 export(activeImage)
 export(addExpressionMatrix)
 export(addFeatures)
@@ -161,6 +162,7 @@ export(getActiveExpressionMatrixName)
 export(getActiveMatrixName)
 export(getAutoencoderAssessment)
 export(getAutoencoderSetUp)
+export(getBackgroundColor)
 export(getBarcodeSpotDistance)
 export(getBarcodeSpotDistances)
 export(getBarcodes)
@@ -365,6 +367,7 @@ export(hlpr_summarize_trajectory_df)
 export(hlpr_transfer_slot_content)
 export(hlpr_vector_projection)
 export(hlpr_widen_trajectory_df)
+export(identifyBackgroundColor)
 export(identifyTissueOutline)
 export(imageAnnotationScreening)
 export(imageAnnotationToSegmentation)
@@ -513,6 +516,7 @@ export(renameGroups)
 export(renameImgAnn)
 export(renameSegments)
 export(resetImageJustification)
+export(resetImageTransformations)
 export(rotateAll)
 export(rotateCoordinates)
 export(rotateCoordsDf)
@@ -663,7 +667,10 @@ exportClasses(dim_red)
 exportClasses(spata2)
 exportClasses(spatial_trajectory)
 exportMethods(activateImage)
+exportMethods(activateImageInt)
+exportMethods(activeImage)
 exportMethods(addHistoImage)
+exportMethods(addImageAnnotation)
 exportMethods(addTissueOutlineBase)
 exportMethods(addVarToCoords)
 exportMethods(alignImage)
@@ -685,12 +692,15 @@ exportMethods(exclude)
 exportMethods(excludeArtefacts)
 exportMethods(excludeTissueFragments)
 exportMethods(getActive)
+exportMethods(getBackgroundColor)
 exportMethods(getCCD)
 exportMethods(getCoordsDf)
 exportMethods(getHistoImage)
 exportMethods(getHistoImageActive)
 exportMethods(getHistoImageRef)
 exportMethods(getImage)
+exportMethods(getImageAnnotation)
+exportMethods(getImageAnnotations)
 exportMethods(getImageCenter)
 exportMethods(getImageDf)
 exportMethods(getImageDims)
@@ -698,8 +708,13 @@ exportMethods(getImageNames)
 exportMethods(getImageRange)
 exportMethods(getImageRaster)
 exportMethods(getImageTransformations)
+exportMethods(getImgAnnArea)
 exportMethods(getImgAnnCenter)
 exportMethods(getImgAnnCenters)
+exportMethods(getImgAnnIds)
+exportMethods(getImgAnnOutlineDf)
+exportMethods(getImgAnnRange)
+exportMethods(getImgAnnTags)
 exportMethods(getModelEvaluationDf)
 exportMethods(getPixelDf)
 exportMethods(getPixelScaleFactor)
@@ -714,12 +729,15 @@ exportMethods(getWindowSize)
 exportMethods(ggpLayerImage)
 exportMethods(ggpLayerSpots)
 exportMethods(ggpLayerTissueOutline)
+exportMethods(identifyBackgroundColor)
 exportMethods(identifyPixelContent)
 exportMethods(identifyTissueOutline)
 exportMethods(loadImage)
 exportMethods(loadImages)
+exportMethods(nImageAnnotations)
 exportMethods(plotClockplot)
 exportMethods(plotImage)
+exportMethods(plotImageAnnotations)
 exportMethods(plotImageBase)
 exportMethods(plotImageMask)
 exportMethods(plotImages)
@@ -730,6 +748,7 @@ exportMethods(plotSurfaceIAS)
 exportMethods(plotVolcano)
 exportMethods(registerImage)
 exportMethods(removeImage)
+exportMethods(resetImageTransformations)
 exportMethods(setHistoImage)
 exportMethods(setImageTransformations)
 exportMethods(setScaleFactor)
