--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -73,6 +73,7 @@ Collate:
     'deprecated_j-z.R'
     'dev.R'
     'devImaging.R'
+    'devImgAnns.R'
     'devTemp.R'
     'documentation-dummies.R'
     'e.R'
