ready for testing

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -66,7 +66,6 @@ export(as_nanometer2)
 export(as_pixel)
 export(as_unit)
 export(assessAutoencoderOptions)
-export(assignToTissueSection)
 export(attachUnit)
 export(attach_uni)
 export(barcodesToImageAnnotation)
@@ -103,7 +102,9 @@ export(containsMethod)
 export(containsPixelContent)
 export(containsPixelScaleFactor)
 export(containsScaleFactor)
+export(containsSpatialOutliers)
 export(containsTissueOutline)
+export(containsVersion)
 export(countImageAnnotationTags)
 export(createHistoImage)
 export(createHistoImaging)
@@ -139,7 +140,7 @@ export(evaluate_model_fits)
 export(examineClusterResults)
 export(exchangeImage)
 export(exclude)
-export(excludeArtefacts)
+export(excludeSpatialOutliers)
 export(excludeTissueFragments)
 export(extract_unit)
 export(extract_value)
@@ -255,6 +256,7 @@ export(getInitiationInfo)
 export(getInitiationInput)
 export(getMatrices)
 export(getMatrix)
+export(getMatrixNames)
 export(getPcaDf)
 export(getPcaMtr)
 export(getPixelDf)
@@ -368,6 +370,7 @@ export(hlpr_transfer_slot_content)
 export(hlpr_vector_projection)
 export(hlpr_widen_trajectory_df)
 export(identifyBackgroundColor)
+export(identifySpatialOutliers)
 export(identifyTissueOutline)
 export(imageAnnotationScreening)
 export(imageAnnotationToSegmentation)
@@ -403,6 +406,7 @@ export(joinWithPca)
 export(joinWithTsne)
 export(joinWithUmap)
 export(joinWithVariables)
+export(labsNone)
 export(lastImageAnnotation)
 export(legendBottom)
 export(legendColor)
@@ -500,6 +504,7 @@ export(printAutoencoderSummary)
 export(printDeaOverview)
 export(printDefaultInstructions)
 export(printGeneSetOverview)
+export(processWithSeurat)
 export(process_expand_input)
 export(process_ranges)
 export(project_on_trajectory)
@@ -507,6 +512,7 @@ export(project_on_vector)
 export(protected_spatial_method_info_slots)
 export(protected_variable_names)
 export(read_coords_visium)
+export(refImage)
 export(registerImage)
 export(relateToImageAnnotation)
 export(relevelGroups)
@@ -609,22 +615,22 @@ export(theme_ridgeplot_gradient)
 export(theme_trajectory_fit)
 export(theme_transparent)
 export(tissueOutlineIdentified)
-export(tissueSectionsIdentified)
 export(transformSeuratToSpata)
 export(transformSpataToCDS)
 export(transformSpataToSeurat)
 export(transform_area_si_to_pixel)
 export(transform_area_si_to_pixels)
+export(transform_coords)
 export(transform_dist_si_to_pixel)
 export(transform_dist_si_to_pixels)
 export(transform_image)
-export(transform_outline)
 export(transform_pixel_to_area_si)
 export(transform_pixel_to_dist_si)
 export(transform_pixels_to_area_si)
 export(transform_pixels_to_dist_si)
 export(unloadImage)
 export(unloadImages)
+export(updateS4)
 export(updateSpataObject)
 export(validActivationFunctions)
 export(validAgglomerationMethods)
@@ -679,7 +685,6 @@ exportMethods(alignImageInteractive)
 exportMethods(asHistologyImage)
 exportMethods(asHistologyImaging)
 exportMethods(asSPATA2)
-exportMethods(assignToTissueSection)
 exportMethods(centerTissueOutline)
 exportMethods(computePixelScaleFactor)
 exportMethods(containsCCD)
@@ -687,9 +692,10 @@ exportMethods(containsImage)
 exportMethods(containsMethod)
 exportMethods(containsPixelContent)
 exportMethods(containsScaleFactor)
+exportMethods(containsSpatialOutliers)
 exportMethods(containsTissueOutline)
 exportMethods(exclude)
-exportMethods(excludeArtefacts)
+exportMethods(excludeSpatialOutliers)
 exportMethods(excludeTissueFragments)
 exportMethods(getActive)
 exportMethods(getBackgroundColor)
@@ -731,6 +737,7 @@ exportMethods(ggpLayerSpots)
 exportMethods(ggpLayerTissueOutline)
 exportMethods(identifyBackgroundColor)
 exportMethods(identifyPixelContent)
+exportMethods(identifySpatialOutliers)
 exportMethods(identifyTissueOutline)
 exportMethods(loadImage)
 exportMethods(loadImages)
@@ -746,6 +753,7 @@ exportMethods(plotPixelContent)
 exportMethods(plotSurface)
 exportMethods(plotSurfaceIAS)
 exportMethods(plotVolcano)
+exportMethods(refImage)
 exportMethods(registerImage)
 exportMethods(removeImage)
 exportMethods(resetImageTransformations)
@@ -754,9 +762,9 @@ exportMethods(setImageTransformations)
 exportMethods(setScaleFactor)
 exportMethods(show)
 exportMethods(tissueOutlineIdentified)
-exportMethods(tissueSectionsIdentified)
 exportMethods(unloadImage)
 exportMethods(unloadImages)
+exportMethods(updateS4)
 import(SingleCellExperiment)
 import(SummarizedExperiment)
 import(grid)
