--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,8 @@
 export(GeomPointFixed)
 export(GeomSegmentFixed)
 export(GeomTextFixed)
+export(MERFISH)
+export(SlideSeqV1)
 export(VisiumLarge)
 export(VisiumSmall)
 export(activateImage)
@@ -94,6 +96,7 @@ export(compute_angle_between_two_points)
 export(compute_img_scale_fct)
 export(containsCCD)
 export(containsCNV)
+export(containsCells)
 export(containsHistoImaging)
 export(containsHistologyImage)
 export(containsImage)
@@ -101,15 +104,19 @@ export(containsImageObject)
 export(containsMethod)
 export(containsPixelContent)
 export(containsPixelScaleFactor)
+export(containsPseudoImage)
 export(containsScaleFactor)
 export(containsSpatialAnnotations)
 export(containsSpatialOutliers)
+export(containsSpots)
 export(containsTissueOutline)
 export(containsVersion)
 export(countImageAnnotationTags)
 export(createGroupAnnotations)
 export(createHistoImage)
 export(createHistoImaging)
+export(createHistoImagingMERFISH)
+export(createHistoImagingSlideSeqV1)
 export(createHistoImagingVisium)
 export(createHistologyImaging)
 export(createImageAnnotations)
@@ -135,6 +142,7 @@ export(discardGenes)
 export(discardImageAnnotations)
 export(discardSegmentationVariable)
 export(discardSpatialTrajectory)
+export(distToEdge)
 export(downloadPubExample)
 export(downloadRawData)
 export(downloadSpataObject)
@@ -174,12 +182,14 @@ export(getBarcodes)
 export(getBarcodesInPolygon)
 export(getBarcodesInPolygonList)
 export(getCCD)
+export(getCaptureArea)
 export(getChrRegionsDf)
 export(getCnvFeatureNames)
 export(getCnvGenesDf)
 export(getCnvResults)
 export(getCoordsCenter)
 export(getCoordsDf)
+export(getCoordsDfSA)
 export(getCoordsRange)
 export(getCountMatrix)
 export(getDeaGenes)
@@ -191,6 +201,7 @@ export(getDefaultGrouping)
 export(getDefaultInstructions)
 export(getDefaultTrajectory)
 export(getDefaultTrajectoryId)
+export(getDefaultUnit)
 export(getDirectoryInstructions)
 export(getExpressionMatrix)
 export(getExpressionMatrixNames)
@@ -248,6 +259,8 @@ export(getPcaDf)
 export(getPcaMtr)
 export(getPixelDf)
 export(getPixelScaleFactor)
+export(getProcessedMatrix)
+export(getProcessedMatrixNames)
 export(getProjectionDf)
 export(getPubExample)
 export(getResultsDf)
@@ -320,13 +333,13 @@ export(ggpLayerImage)
 export(ggpLayerImageAnnotation)
 export(ggpLayerImgAnnBorder)
 export(ggpLayerLineplotAid)
+export(ggpLayerPoints)
 export(ggpLayerRect)
 export(ggpLayerSampleMask)
 export(ggpLayerScaleBarSI)
 export(ggpLayerSpatAnnOutline)
 export(ggpLayerSpatAnnPointer)
 export(ggpLayerSpatAnnRect)
-export(ggpLayerSpots)
 export(ggpLayerThemeCoords)
 export(ggpLayerTissueOutline)
 export(ggpLayerTrajectories)
@@ -379,6 +392,8 @@ export(identifyTissueOutline)
 export(imageAnnotationToSegmentation)
 export(include_tissue_outline)
 export(inferSingleCellGradient)
+export(initiateSpataObjectMERFISH)
+export(initiateSpataObjectSlideSeqV1)
 export(initiateSpataObjectVisium)
 export(initiateSpataObject_10X)
 export(initiateSpataObject_CountMtr)
@@ -427,6 +442,7 @@ export(loadSpataObject)
 export(make_orthogonal_segment)
 export(mapImageAnnotationTags)
 export(mergeGroups)
+export(mergeSpatialAnnotations)
 export(mergeTissueSections)
 export(model_formulas)
 export(nBarcodes)
@@ -515,12 +531,22 @@ export(project_on_trajectory)
 export(project_on_vector)
 export(protected_spatial_method_info_slots)
 export(protected_variable_names)
+export(read_coords)
+export(read_coords_merfish)
+export(read_coords_slide_seq_v1)
 export(read_coords_visium)
+export(recBinwidth)
+export(recDbscanEps)
+export(recDbscanMinPts)
 export(refImage)
 export(registerImage)
 export(relateToSpatialAnnotation)
 export(relevelGroups)
+export(removeGenes)
+export(removeGenesStress)
+export(removeGenesZeroCounts)
 export(removeImage)
+export(removeSpatialAnnotations)
 export(renameFeatures)
 export(renameGroups)
 export(renameSegments)
@@ -542,6 +568,7 @@ export(runDEA)
 export(runDeAnalysis)
 export(runGSEA)
 export(runImagePipeline)
+export(runKmeansClustering)
 export(runPca)
 export(runPca2)
 export(runSeuratClustering)
@@ -566,6 +593,7 @@ export(setActiveExpressionMatrix)
 export(setActiveMatrix)
 export(setBarcodes)
 export(setCCD)
+export(setCaptureArea)
 export(setCnvResults)
 export(setCoordsDf)
 export(setCountMatrix)
@@ -575,7 +603,6 @@ export(setDefaultGrouping)
 export(setDefaultInstructions)
 export(setDefaultTrajectory)
 export(setDefaultTrajectoryId)
-export(setDenoisedMatrix)
 export(setDirectoryInstructions)
 export(setFeatureDf)
 export(setHistoImage)
@@ -588,12 +615,11 @@ export(setImageDirLowres)
 export(setImageObject)
 export(setImageOrigin)
 export(setImageTransformations)
-export(setNormalizedMatrix)
 export(setOutlineVarName)
 export(setPcaDf)
 export(setPixelScaleFactor)
+export(setProcessedMatrix)
 export(setScaleFactor)
-export(setScaledMatrix)
 export(setSpataDir)
 export(setSpatialMethod)
 export(setSpatialMethodInfo)
@@ -662,6 +688,7 @@ export(validUnitsOfArea)
 export(validUnitsOfAreaSI)
 export(validUnitsOfLength)
 export(vselect)
+export(whichTissueSection)
 exportClasses(HistoImage)
 exportClasses(HistoImaging)
 exportClasses(HistologyImage)
@@ -695,12 +722,15 @@ exportMethods(asSPATA2)
 exportMethods(centerTissueOutline)
 exportMethods(computePixelScaleFactor)
 exportMethods(containsCCD)
+exportMethods(containsCells)
 exportMethods(containsImage)
 exportMethods(containsMethod)
 exportMethods(containsPixelContent)
+exportMethods(containsPseudoImage)
 exportMethods(containsScaleFactor)
 exportMethods(containsSpatialAnnotations)
 exportMethods(containsSpatialOutliers)
+exportMethods(containsSpots)
 exportMethods(containsTissueOutline)
 exportMethods(exclude)
 exportMethods(excludeSpatialOutliers)
@@ -741,7 +771,7 @@ exportMethods(getTissueOutlineCentroid)
 exportMethods(getTissueOutlineDf)
 exportMethods(getWindowSize)
 exportMethods(ggpLayerImage)
-exportMethods(ggpLayerSpots)
+exportMethods(ggpLayerPoints)
 exportMethods(ggpLayerTissueOutline)
 exportMethods(identifyBackgroundColor)
 exportMethods(identifyPixelContent)
@@ -768,6 +798,7 @@ exportMethods(resetImageTransformations)
 exportMethods(setHistoImage)
 exportMethods(setImageTransformations)
 exportMethods(setScaleFactor)
+exportMethods(setSpatialMethod)
 exportMethods(show)
 exportMethods(tissueOutlineIdentified)
 exportMethods(unloadImage)
