--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(GeomPointFixed)
 export(GeomSegmentFixed)
 export(GeomTextFixed)
 export(MERFISH)
+export(PseudoHistoImage)
 export(SlideSeqV1)
 export(VisiumLarge)
 export(VisiumSmall)
@@ -106,6 +107,7 @@ export(containsPixelContent)
 export(containsPixelScaleFactor)
 export(containsPseudoImage)
 export(containsScaleFactor)
+export(containsSectionVariable)
 export(containsSpatialAnnotations)
 export(containsSpatialOutliers)
 export(containsSpots)
@@ -190,6 +192,7 @@ export(getCnvResults)
 export(getCoordsCenter)
 export(getCoordsDf)
 export(getCoordsDfSA)
+export(getCoordsMtr)
 export(getCoordsRange)
 export(getCountMatrix)
 export(getDeaGenes)
@@ -386,6 +389,8 @@ export(hlpr_summarize_trajectory_df)
 export(hlpr_transfer_slot_content)
 export(hlpr_vector_projection)
 export(hlpr_widen_trajectory_df)
+export(idSA)
+export(idST)
 export(identifyBackgroundColor)
 export(identifySpatialOutliers)
 export(identifyTissueOutline)
@@ -520,10 +525,12 @@ export(plotUmapComparison)
 export(plotVioBoxplot)
 export(plotViolinplot)
 export(plotVolcano)
+export(plot_model_comparison_dotplot)
 export(printAutoencoderSummary)
 export(printDeaOverview)
 export(printDefaultInstructions)
 export(printGeneSetOverview)
+export(processWithSCT)
 export(processWithSeurat)
 export(process_expand_input)
 export(process_ranges)
@@ -547,6 +554,7 @@ export(removeGenesStress)
 export(removeGenesZeroCounts)
 export(removeImage)
 export(removeSpatialAnnotations)
+export(removeSpatialOutliers)
 export(renameFeatures)
 export(renameGroups)
 export(renameSegments)
@@ -621,6 +629,7 @@ export(setPixelScaleFactor)
 export(setProcessedMatrix)
 export(setScaleFactor)
 export(setSpataDir)
+export(setSpatialAnnotation)
 export(setSpatialMethod)
 export(setSpatialMethodInfo)
 export(setSpatialMethodSlot)
@@ -646,7 +655,6 @@ export(theme_lineplot_gradient)
 export(theme_ridgeplot_gradient)
 export(theme_trajectory_fit)
 export(theme_transparent)
-export(tissueOutlineIdentified)
 export(transformSeuratToSpata)
 export(transformSpataToCDS)
 export(transformSpataToSeurat)
@@ -728,6 +736,7 @@ exportMethods(containsMethod)
 exportMethods(containsPixelContent)
 exportMethods(containsPseudoImage)
 exportMethods(containsScaleFactor)
+exportMethods(containsSectionVariable)
 exportMethods(containsSpatialAnnotations)
 exportMethods(containsSpatialOutliers)
 exportMethods(containsSpots)
@@ -795,12 +804,13 @@ exportMethods(refImage)
 exportMethods(registerImage)
 exportMethods(removeImage)
 exportMethods(resetImageTransformations)
+exportMethods(setCoordsDf)
 exportMethods(setHistoImage)
 exportMethods(setImageTransformations)
 exportMethods(setScaleFactor)
+exportMethods(setSpatialAnnotation)
 exportMethods(setSpatialMethod)
 exportMethods(show)
-exportMethods(tissueOutlineIdentified)
 exportMethods(unloadImage)
 exportMethods(unloadImages)
 exportMethods(updateS4)
