--- a/NAMESPACE
+++ b/NAMESPACE
@@ -160,6 +160,7 @@ export(extract_value)
 export(filterDeaDf)
 export(findMonocleClusters)
 export(findNearestNeighbourClusters)
+export(findOptimalDistanceSAS)
 export(findSDEGS)
 export(findSeuratClusters)
 export(flipAll)
