--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(PseudoHistoImage)
 export(SlideSeqV1)
 export(VisiumLarge)
 export(VisiumSmall)
+export(Xenium)
 export(activateImage)
 export(activateImageInt)
 export(activeImage)
@@ -71,6 +72,7 @@ export(as_unit)
 export(assessAutoencoderOptions)
 export(attachUnit)
 export(attach_uni)
+export(background_white)
 export(barcodesToSpatialAnnotation)
 export(bin_by_angle)
 export(bin_by_expansion)
@@ -120,6 +122,7 @@ export(createHistoImaging)
 export(createHistoImagingMERFISH)
 export(createHistoImagingSlideSeqV1)
 export(createHistoImagingVisium)
+export(createHistoImagingXenium)
 export(createHistologyImaging)
 export(createImageAnnotations)
 export(createImageObject)
@@ -401,6 +404,7 @@ export(inferSingleCellGradient)
 export(initiateSpataObjectMERFISH)
 export(initiateSpataObjectSlideSeqV1)
 export(initiateSpataObjectVisium)
+export(initiateSpataObjectXenium)
 export(initiateSpataObject_10X)
 export(initiateSpataObject_CountMtr)
 export(initiateSpataObject_Empty)
@@ -543,6 +547,7 @@ export(read_coords)
 export(read_coords_merfish)
 export(read_coords_slide_seq_v1)
 export(read_coords_visium)
+export(read_coords_xenium)
 export(recBinwidth)
 export(recDbscanEps)
 export(recDbscanMinPts)
@@ -556,6 +561,7 @@ export(removeGenesZeroCounts)
 export(removeImage)
 export(removeSpatialAnnotations)
 export(removeSpatialOutliers)
+export(removeTissueFragments)
 export(renameFeatures)
 export(renameGroups)
 export(renameSegments)
