misc plot fixes, correction_factor integrated in sas

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -431,6 +431,7 @@ export(is_dist)
 export(is_dist_pixel)
 export(is_dist_si)
 export(is_inside_plg)
+export(is_outlier)
 export(is_unit_area)
 export(is_unit_dist)
 export(joinWith)
@@ -464,7 +465,8 @@ export(mergeTissueSections)
 export(model_ascending)
 export(model_descending)
 export(model_formulas)
-export(model_formulas_old)
+export(model_formulas_R2_est)
+export(model_formulas_new)
 export(model_peak)
 export(model_trough)
 export(nBarcodes)
