screening with multiple SA simultaneously

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(addGeneSet)
 export(addGeneSetsInteractive)
 export(addHistoImage)
 export(addImageDir)
+export(addInnerBorder)
 export(addPointsBase)
 export(addPolygonBase)
 export(addSpatialAnnotation)
@@ -161,6 +162,7 @@ export(exchangeImage)
 export(exclude)
 export(excludeSpatialOutliers)
 export(excludeTissueFragments)
+export(expandSpatialAnnotation)
 export(extract_unit)
 export(extract_value)
 export(filterDeaDf)
@@ -335,6 +337,7 @@ export(ggpLayerCaptureArea)
 export(ggpLayerColorGroupScale)
 export(ggpLayerEncirclingGroups)
 export(ggpLayerEncirclingSAS)
+export(ggpLayerExprEstimatesSAS)
 export(ggpLayerFixFrame)
 export(ggpLayerFrame)
 export(ggpLayerFrameByCoords)
@@ -749,6 +752,7 @@ exportMethods(activateImage)
 exportMethods(activateImageInt)
 exportMethods(activeImage)
 exportMethods(addHistoImage)
+exportMethods(addInnerBorder)
 exportMethods(addSpatialAnnotation)
 exportMethods(addTissueOutlineBase)
 exportMethods(addVarToCoords)
