improved sas (benchmarking)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -108,6 +108,7 @@ export(containsHistoImaging)
 export(containsHistologyImage)
 export(containsImage)
 export(containsImageObject)
+export(containsInnerBorders)
 export(containsMethod)
 export(containsPixelContent)
 export(containsPixelScaleFactor)
@@ -406,6 +407,8 @@ export(idST)
 export(identifyBackgroundColor)
 export(identifySpatialOutliers)
 export(identifyTissueOutline)
+export(identify_obs_in_polygon)
+export(identify_obs_in_spat_ann)
 export(imageAnnotationToSegmentation)
 export(include_tissue_outline)
 export(inferSingleCellGradient)
@@ -584,7 +587,7 @@ export(removeTissueFragments)
 export(renameFeatures)
 export(renameGroups)
 export(renameSegments)
-export(renameSpatAnn)
+export(renameSpatialAnnotation)
 export(resetImageJustification)
 export(resetImageTransformations)
 export(rotateAll)
@@ -665,6 +668,8 @@ export(setTrajectories)
 export(setTrajectory)
 export(setTsneDf)
 export(setUmapDf)
+export(sgs_loess_control)
+export(shiftSpatialAnnotation)
 export(shinyModuleZoomingServer)
 export(showColorPalettes)
 export(showColorSpectra)
@@ -674,6 +679,7 @@ export(simulate_expression_pattern_sas)
 export(simulate_expression_pattern_sts)
 export(simulate_random_gradients)
 export(simulate_spatial_niches)
+export(smoothSpatialAnnotation)
 export(smoothSpatially)
 export(spatialAnnotationScreening)
 export(spatialTrajectoryScreening)
@@ -767,6 +773,7 @@ exportMethods(computePixelScaleFactor)
 exportMethods(containsCCD)
 exportMethods(containsCells)
 exportMethods(containsImage)
+exportMethods(containsInnerBorders)
 exportMethods(containsMethod)
 exportMethods(containsPixelContent)
 exportMethods(containsPseudoImage)
