--- a/NAMESPACE
+++ b/NAMESPACE
@@ -354,6 +354,7 @@ export(ggpLayerPoints)
 export(ggpLayerRect)
 export(ggpLayerSampleMask)
 export(ggpLayerScaleBarSI)
+export(ggpLayerScreeningDirectionSAS)
 export(ggpLayerSpatAnnOutline)
 export(ggpLayerSpatAnnPointer)
 export(ggpLayerSpatAnnRect)
