--- a/NAMESPACE
+++ b/NAMESPACE
@@ -750,7 +750,9 @@ exportClasses(HistoImaging)
 exportClasses(HistologyImage)
 exportClasses(HistologyImaging)
 exportClasses(ImageAnnotation)
+exportClasses(MolecularAssay)
 exportClasses(SDEGS)
+exportClasses(SPATA2)
 exportClasses(SpatialAnnotationScreening)
 exportClasses(SpatialMethod)
 exportClasses(SpatialTrajectory)
