SpatialData and doc update

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -543,6 +543,7 @@ export(printAutoencoderSummary)
 export(printDeaOverview)
 export(printDefaultInstructions)
 export(printGeneSetOverview)
+export(processImage)
 export(process_expand_input)
 export(process_ranges)
 export(project_on_trajectory)
