improved automatic spatial annotation

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,9 @@ review2
 test.png
 todo_simon
 data-meta
+all_gbm_overview.pdf
+gbm_chrom_instab_3samples.pdf
+gbm_hypoxia_assoc.pdf
+gbm_overview2.pdf
+gbm_overview3.pdf
+gbm_overview4.pdf
