--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(addGeneSet)
 export(addGeneSetsInteractive)
 export(addImageDir)
 export(addInnerBorder)
+export(addMolecularAssay)
 export(addPointsBase)
 export(addPolygonBase)
 export(addProcessedMatrix)
@@ -98,6 +99,7 @@ export(check_trajectory_object)
 export(check_variables)
 export(close_area_df)
 export(color_vector)
+export(computeChromosomalDamage)
 export(computeCnvByChrArm)
 export(computeGeneMetaData)
 export(computeGeneMetaData2)
@@ -464,6 +466,7 @@ export(mapSpatialAnnotationTags)
 export(mergeGroups)
 export(mergeSpatialAnnotations)
 export(mergeTissueSections)
+export(merge_intersecting_polygons)
 export(model_ascending)
 export(model_descending)
 export(model_formulas)
@@ -567,6 +570,7 @@ export(removeGenes)
 export(removeGenesStress)
 export(removeGenesZeroCounts)
 export(removeImage)
+export(removeMetaFeatures)
 export(removeMolecules)
 export(removeProcessedMatrix)
 export(removeSpatialAnnotations)
@@ -575,6 +579,7 @@ export(removeTissueFragments)
 export(renameFeatures)
 export(renameGroups)
 export(renameSegments)
+export(renameSpataObject)
 export(renameSpatialAnnotation)
 export(resetImageJustification)
 export(resetImageTransformations)
@@ -589,6 +594,8 @@ export(rotate_coords_df)
 export(runAutoencoderAssessment)
 export(runAutoencoderDenoising)
 export(runBayesSpaceClustering)
+export(runCIN)
+export(runCNV)
 export(runCnvAnalysis)
 export(runDEA)
 export(runDeAnalysis)
@@ -773,6 +780,7 @@ exportMethods(getActive)
 exportMethods(getBackgroundColor)
 exportMethods(getCCD)
 exportMethods(getCoordsDf)
+exportMethods(getCountMatrix)
 exportMethods(getHistoImage)
 exportMethods(getHistoImageRef)
 exportMethods(getImage)
@@ -783,8 +791,12 @@ exportMethods(getImageNames)
 exportMethods(getImageRange)
 exportMethods(getImageRaster)
 exportMethods(getImageTransformations)
+exportMethods(getMatrices)
+exportMethods(getMatrix)
+exportMethods(getMatrixNames)
 exportMethods(getPixelDf)
 exportMethods(getPixelScaleFactor)
+exportMethods(getProcessedMatrixNames)
 exportMethods(getResultsDf)
 exportMethods(getResultsVec)
 exportMethods(getScaleFactor)
