platform and logfile slot updated

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -256,6 +256,7 @@ export(getImageRasterInfo)
 export(getImageSectionsByBarcode)
 export(getImageTransformations)
 export(getImgAnnBorderDf)
+export(getLogfileDf)
 export(getMatrices)
 export(getMatrix)
 export(getMatrixNames)
@@ -565,7 +566,6 @@ export(refImage)
 export(registerImage)
 export(relateToSpatialAnnotation)
 export(relevelGroups)
-export(removeFeatures)
 export(removeGenes)
 export(removeGenesStress)
 export(removeGenesZeroCounts)
@@ -576,8 +576,8 @@ export(removeProcessedMatrix)
 export(removeSpatialAnnotations)
 export(removeSpatialOutliers)
 export(removeTissueFragments)
-export(renameFeatures)
 export(renameGroups)
+export(renameMetaFeatures)
 export(renameSegments)
 export(renameSpataObject)
 export(renameSpatialAnnotation)
@@ -600,7 +600,6 @@ export(runCnvAnalysis)
 export(runDEA)
 export(runDeAnalysis)
 export(runGSEA)
-export(runImagePipeline)
 export(runKmeansClustering)
 export(runPca)
 export(runPca2)
@@ -639,8 +638,8 @@ export(setImageDirDefault)
 export(setImageDirHighres)
 export(setImageDirLowres)
 export(setImageObject)
-export(setImageOrigin)
 export(setImageTransformations)
+export(setLogfileDf)
 export(setMetaDf)
 export(setOutlineVarName)
 export(setPcaDf)
