--- a/NAMESPACE
+++ b/NAMESPACE
@@ -105,6 +105,9 @@ export(computeGeneMetaData)
 export(computeGeneMetaData2)
 export(computePixelScaleFactor)
 export(compute_angle_between_two_points)
+export(compute_correction_factor_sas)
+export(compute_correction_factor_sts)
+export(compute_expression_estimates)
 export(compute_img_scale_fct)
 export(containsAssay)
 export(containsCCD)
@@ -216,6 +219,7 @@ export(getDefaultUnit)
 export(getDirectoryInstructions)
 export(getExpressionMatrix)
 export(getExpressionMatrixNames)
+export(getFeatureDf)
 export(getFeatureNames)
 export(getGeneCounts)
 export(getGeneMetaData)
@@ -412,6 +416,7 @@ export(include_tissue_outline)
 export(increase_n_data_points)
 export(increase_polygon_vertices)
 export(inferSingleCellGradient)
+export(infer_gradient)
 export(initiateSpataObject)
 export(initiateSpataObjectMERFISH)
 export(initiateSpataObjectSlideSeqV1)
@@ -663,6 +668,8 @@ export(showColorPalettes)
 export(showColorSpectra)
 export(showColors)
 export(showModels)
+export(simulate_complete_coords_sa)
+export(simulate_complete_coords_st)
 export(simulate_expression_pattern_sas)
 export(simulate_expression_pattern_sts)
 export(simulate_random_expression)
