--- a/NAMESPACE
+++ b/NAMESPACE
@@ -704,6 +704,7 @@ export(unloadImage)
 export(unloadImages)
 export(updateS4)
 export(updateSpataObject)
+export(update_spata2v2_to_spata2v3)
 export(validActivationFunctions)
 export(validAgglomerationMethods)
 export(validAlluvialTypes)
