--- a/NAMESPACE
+++ b/NAMESPACE
@@ -512,6 +512,7 @@ export(plotImage)
 export(plotImageBase)
 export(plotImageMask)
 export(plotImages)
+export(plotLoglik)
 export(plotMosaicplot)
 export(plotOverview)
 export(plotPca)
