--- a/NAMESPACE
+++ b/NAMESPACE
@@ -162,6 +162,7 @@ export(downloadRawData)
 export(downloadSpataObject)
 export(downloadSpataObjects)
 export(evaluate_model_fits)
+export(exchangeImage)
 export(exclude)
 export(excludeSpatialOutliers)
 export(excludeTissueFragments)
@@ -582,6 +583,7 @@ export(removeGenesZeroCounts)
 export(removeImage)
 export(removeMetaFeatures)
 export(removeMolecules)
+export(removeObsNoCounts)
 export(removeProcessedMatrix)
 export(removeSpatialAnnotations)
 export(removeSpatialOutliers)
