--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ export(addExpressionMatrix)
 export(addFeatures)
 export(addGeneSet)
 export(addGeneSetsInteractive)
+export(addImageAnnotation)
 export(addInnerBorder)
 export(addProcessedMatrix)
 export(addSpatialAnnotation)
@@ -44,6 +45,7 @@ export(add_grid_variable)
 export(add_models)
 export(add_models_to_shifted_projection_df)
 export(add_tissue_section_variable)
+export(adjustDefaultInstructions)
 export(alignImage)
 export(alignImageInteractive)
 export(allColorpalettes)
@@ -84,10 +86,7 @@ export(check_image_annotation_tags)
 export(check_method)
 export(check_object)
 export(check_sas_input)
-export(check_slot_used_genesets)
-export(check_slot_version)
 export(check_to)
-export(check_trajectory_object)
 export(check_variables)
 export(close_area_df)
 export(color_vector)
@@ -105,6 +104,7 @@ export(containsCCD)
 export(containsCNV)
 export(containsCells)
 export(containsHistoImages)
+export(containsHistologyImaging)
 export(containsImage)
 export(containsInnerBorders)
 export(containsMethod)
@@ -119,9 +119,7 @@ export(containsTissueOutline)
 export(containsVersion)
 export(createGroupAnnotations)
 export(createHistoImage)
-export(createHistologyImaging)
 export(createImageAnnotations)
-export(createImageObject)
 export(createMolecularAssay)
 export(createNumericAnnotations)
 export(createSegmentation)
@@ -163,6 +161,7 @@ export(filterDeaDf)
 export(find_elbow_point)
 export(flipAll)
 export(flipCoordinates)
+export(flipCoords)
 export(flipCoordsDf)
 export(flipImage)
 export(flipSpatialAnnotations)
@@ -202,6 +201,7 @@ export(getDeaLfcName)
 export(getDeaOverview)
 export(getDeaResultsDf)
 export(getDefault)
+export(getDefaultGrouping)
 export(getDefaultInstructions)
 export(getDefaultUnit)
 export(getDirectoryInstructions)
@@ -209,7 +209,6 @@ export(getExpressionMatrix)
 export(getExpressionMatrixNames)
 export(getFeatureDf)
 export(getFeatureNames)
-export(getGeneCounts)
 export(getGeneMetaData)
 export(getGeneMetaDf)
 export(getGenePosDf)
@@ -239,15 +238,20 @@ export(getImageDirDefault)
 export(getImageDirHighres)
 export(getImageDirLowres)
 export(getImageDirectories)
-export(getImageInfo)
 export(getImageNames)
-export(getImageObject)
 export(getImageRange)
 export(getImageRaster)
 export(getImageRasterInfo)
 export(getImageSectionsByBarcode)
 export(getImageTransformations)
+export(getImgAnnArea)
 export(getImgAnnBorderDf)
+export(getImgAnnCenter)
+export(getImgAnnCenters)
+export(getImgAnnIds)
+export(getImgAnnOutlineDf)
+export(getImgAnnRange)
+export(getImgAnnTags)
 export(getLogfileDf)
 export(getMatrices)
 export(getMatrix)
@@ -263,14 +267,11 @@ export(getPixelScaleFactor)
 export(getProcessedMatrix)
 export(getProcessedMatrixNames)
 export(getProjectionDf)
-export(getPubExample)
 export(getResultsDf)
 export(getResultsVec)
 export(getSampleName)
 export(getSasDf)
 export(getScaleFactor)
-export(getSegmentDf)
-export(getSegmentNames)
 export(getSgsResultsDf)
 export(getSignatureTypeList)
 export(getSignatures)
@@ -287,7 +288,6 @@ export(getSpatAnnIds)
 export(getSpatAnnOutlineDf)
 export(getSpatAnnRange)
 export(getSpatAnnSf)
-export(getSpatAnnSummaryDf)
 export(getSpatAnnTags)
 export(getSpatSegmVarNames)
 export(getSpataDf)
@@ -298,6 +298,7 @@ export(getSpatialData)
 export(getSpatialMethod)
 export(getSpatialTrajectories)
 export(getSpatialTrajectory)
+export(getSpatialTrajectoryIds)
 export(getSpotSize)
 export(getStsDf)
 export(getTissueArea)
@@ -347,17 +348,11 @@ export(ggpLayerThemeCoords)
 export(ggpLayerTissueOutline)
 export(ggpLayerTrajectoryFrame)
 export(ggpLayerZoom)
-export(hlpr_add_models)
-export(hlpr_add_residuals)
-export(hlpr_add_residuals2)
-export(hlpr_add_residuals_customized)
-export(hlpr_add_residuals_diet)
 export(hlpr_adjust_legend_size)
 export(hlpr_assign_arguments)
 export(hlpr_breaks)
 export(hlpr_dist_mtr_to_df)
 export(hlpr_drop_all_na)
-export(hlpr_filter_trend)
 export(hlpr_gene_set_name)
 export(hlpr_image_add_on)
 export(hlpr_image_add_on2)
@@ -365,17 +360,14 @@ export(hlpr_image_to_df)
 export(hlpr_join_with_aes)
 export(hlpr_join_with_color_by)
 export(hlpr_labs_add_on)
-export(hlpr_name_models)
 export(hlpr_normalize_imap)
 export(hlpr_normalize_vctr)
 export(hlpr_one_distinct)
-export(hlpr_run_cnva_pca)
 export(hlpr_save_spata_object)
 export(hlpr_scatterplot)
 export(hlpr_smooth)
 export(hlpr_smooth_shiny)
 export(hlpr_subset_across)
-export(hlpr_summarize_residuals)
 export(hlpr_transfer_slot_content)
 export(hlpr_vector_projection)
 export(hlpr_widen_trajectory_df)
@@ -384,6 +376,7 @@ export(idST)
 export(identifyBackgroundColor)
 export(identifySpatialOutliers)
 export(identifyTissueOutline)
+export(identifyTissueSections)
 export(identify_obs_in_polygon)
 export(identify_obs_in_spat_ann)
 export(initiateSpataObject)
