--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,7 +57,6 @@ export(asGiotto)
 export(asSPATA2)
 export(asSeurat)
 export(asSingleCellExperiment)
-export(asSpatialTrajectory)
 export(asSummarizedExperiment)
 export(as_SPATA2_dist)
 export(as_centimeter)
@@ -575,7 +574,6 @@ export(scale_coords_df)
 export(setActiveExpressionMatrix)
 export(setActiveMatrix)
 export(setAssay)
-export(setBarcodes)
 export(setCCD)
 export(setCaptureArea)
 export(setCnvResults)
@@ -604,8 +602,8 @@ export(setSpatialData)
 export(setSpatialMethod)
 export(setSpatialMethodInfo)
 export(setSpatialMethodSlot)
-export(setSpatialSpatialTrajectory)
 export(setSpatialTrajectories)
+export(setSpatialTrajectory)
 export(setTrajectories)
 export(setTrajectory)
 export(setTsneDf)
