doc update for website reference page

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -172,7 +172,6 @@ export(getAutoencoderAssessment)
 export(getAutoencoderSetUp)
 export(getBackgroundColor)
 export(getBarcodeSpotDistance)
-export(getBarcodeSpotDistances)
 export(getBarcodes)
 export(getBarcodesInPolygon)
 export(getBarcodesInPolygonList)
@@ -261,6 +260,7 @@ export(getProcessedMatrixNames)
 export(getProjectionDf)
 export(getResultsDf)
 export(getResultsVec)
+export(getSampleAreaSize)
 export(getSampleName)
 export(getSasDf)
 export(getScaleFactor)
@@ -631,6 +631,7 @@ export(spatial_methods)
 export(spatial_trajectory)
 export(splitSpataObject)
 export(subsetByBarcodes)
+export(subsetSpataObject)
 export(summarize_formulas)
 export(tagSpatialAnnotations)
 export(theme_lineplot_gradient)
