integrate "molecular modality"

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -102,6 +102,7 @@ export(containsHistologyImaging)
 export(containsImage)
 export(containsInnerBorders)
 export(containsMethod)
+export(containsModality)
 export(containsPixelContent)
 export(containsScaleFactor)
 export(containsSectionVariable)
@@ -167,6 +168,7 @@ export(getActive)
 export(getActiveExpressionMatrixName)
 export(getActiveMatrixName)
 export(getAssay)
+export(getAssayModalities)
 export(getAssayNames)
 export(getAutoencoderAssessment)
 export(getAutoencoderSetUp)
@@ -248,7 +250,9 @@ export(getMatrices)
 export(getMatrix)
 export(getMatrixNames)
 export(getMetaDf)
+export(getMetabolites)
 export(getMethodSpecifics)
+export(getModality)
 export(getMoleculeTypeList)
 export(getMolecules)
 export(getPcaDf)
@@ -258,6 +262,7 @@ export(getPixelScaleFactor)
 export(getProcessedMatrix)
 export(getProcessedMatrixNames)
 export(getProjectionDf)
+export(getProteins)
 export(getResultsDf)
 export(getResultsVec)
 export(getSampleAreaSize)
@@ -737,6 +742,7 @@ exportMethods(getImageTransformations)
 exportMethods(getMatrices)
 exportMethods(getMatrix)
 exportMethods(getMatrixNames)
+exportMethods(getModality)
 exportMethods(getPixelDf)
 exportMethods(getPixelScaleFactor)
 exportMethods(getProcessedMatrix)
@@ -763,7 +769,6 @@ exportMethods(ggpLayerPoints)
 exportMethods(ggpLayerTissueOutline)
 exportMethods(identifyBackgroundColor)
 exportMethods(identifyPixelContent)
-exportMethods(identifySpatialOutliers)
 exportMethods(identifyTissueOutline)
 exportMethods(loadImage)
 exportMethods(loadImages)
