--- a/NAMESPACE
+++ b/NAMESPACE
@@ -207,6 +207,7 @@ export(getFeatureNames)
 export(getGeneMetaData)
 export(getGeneMetaDf)
 export(getGenePosDf)
+export(getGeneSet)
 export(getGeneSetDf)
 export(getGeneSetList)
 export(getGeneSetOverview)
@@ -250,6 +251,7 @@ export(getMatrices)
 export(getMatrix)
 export(getMatrixNames)
 export(getMetaDf)
+export(getMetaboliteSet)
 export(getMetaboliteSetList)
 export(getMetaboliteSets)
 export(getMetabolites)
@@ -264,6 +266,7 @@ export(getPixelScaleFactor)
 export(getProcessedMatrix)
 export(getProcessedMatrixNames)
 export(getProjectionDf)
+export(getProteinSet)
 export(getProteinSetList)
 export(getProteinSets)
 export(getProteins)
@@ -276,6 +279,7 @@ export(getScaleFactor)
 export(getSegmentationNames)
 export(getSgsResultsDf)
 export(getSgsResultsVec)
+export(getSignature)
 export(getSignatureList)
 export(getSignatureNames)
 export(getSignatureTypeList)
