--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -12,12 +12,13 @@ articles:
   image-handling: image-handling.html
   initiation-and-preprocessing-customized: initiation-and-preprocessing-customized.html
   initiation-and-preprocessing-visium: initiation-and-preprocessing-visium.html
+  molecular-data: molecular-data.html
   newslog: newslog.html
+  plotting-surface: plotting-surface.html
   spatial-annotation-screening: spatial-annotation-screening.html
   spatial-measures: spatial-measures.html
   spatial-segmentation: spatial-segmentation.html
   spatial-trajectory-screening: spatial-trajectory-screening.html
-  surface-plotting: surface-plotting.html
   using-spatial-annotations: using-spatial-annotations.html
-last_built: 2024-07-21T00:36Z
+last_built: 2024-07-22T03:56Z
 
