--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(SpatialMethod)
 export(SpatialTrajectory)
 export(SpatialTrajectoryScreening)
 export(Trajectory)
+export(VisiumHD)
 export(VisiumLarge)
 export(VisiumSmall)
 export(Xenium)
@@ -122,6 +123,7 @@ export(createSpatialData)
 export(createSpatialDataMERFISH)
 export(createSpatialDataSlideSeqV1)
 export(createSpatialDataVisium)
+export(createSpatialDataVisiumHD)
 export(createSpatialDataXenium)
 export(createSpatialMethod)
 export(createSpatialSegmentation)
@@ -258,6 +260,7 @@ export(getPcaDf)
 export(getPcaMtr)
 export(getPixelDf)
 export(getPixelScaleFactor)
+export(getPlatform)
 export(getProcessedMatrix)
 export(getProcessedMatrixNames)
 export(getProjectionDf)
@@ -389,6 +392,7 @@ export(initiateSpataObject)
 export(initiateSpataObjectMERFISH)
 export(initiateSpataObjectSlideSeqV1)
 export(initiateSpataObjectVisium)
+export(initiateSpataObjectVisiumHD)
 export(initiateSpataObjectXenium)
 export(isDirVisium)
 export(isFeature)
@@ -448,8 +452,10 @@ export(model_trough)
 export(nCounts)
 export(nGenes)
 export(nImageDims)
+export(nMetabolites)
 export(nMolecules)
 export(nObs)
+export(nProteins)
 export(nSpatialAnnotations)
 export(nSpatialTrajectories)
 export(nTrajectories)
@@ -530,6 +536,7 @@ export(read_coords_merfish)
 export(read_coords_slide_seq_v1)
 export(read_coords_visium)
 export(read_coords_xenium)
+export(read_matrix_from_folder)
 export(recDbscanEps)
 export(recDbscanMinPts)
 export(recSgsRes)
@@ -752,6 +759,7 @@ exportMethods(getMatrixNames)
 exportMethods(getModality)
 exportMethods(getPixelDf)
 exportMethods(getPixelScaleFactor)
+exportMethods(getPlatform)
 exportMethods(getProcessedMatrix)
 exportMethods(getProcessedMatrixNames)
 exportMethods(getScaleFactor)
@@ -814,7 +822,10 @@ import(SingleCellExperiment)
 import(SummarizedExperiment)
 import(grid)
 import(units)
+importFrom(Matrix,readMM)
 importFrom(SPATAData,downloadSpataObject)
 importFrom(SPATAData,downloadSpataObjects)
 importFrom(Seurat,ScaleData)
 importFrom(magrittr,"%>%")
+importFrom(readr,read_tsv)
+importFrom(stringr,str_subset)
