--- a/NAMESPACE
+++ b/NAMESPACE
@@ -90,7 +90,6 @@ export(check_variables)
 export(close_area_df)
 export(color_vector)
 export(computeCnvByChrArm)
-export(computeMetaFeatures)
 export(computePixelScaleFactor)
 export(compute_angle_between_two_points)
 export(compute_correction_factor_sas)
@@ -145,7 +144,6 @@ export(dissolveGroups)
 export(distToEdge)
 export(downloadSpataObject)
 export(downloadSpataObjects)
-export(evaluate_model_fits)
 export(exchangeImage)
 export(expandSpatialAnnotation)
 export(extract_unit)
@@ -526,7 +524,6 @@ export(printDefaultInstructions)
 export(printGeneSetOverview)
 export(processImage)
 export(process_expand_input)
-export(process_ranges)
 export(project_on_trajectory)
 export(project_on_vector)
 export(protected_spatial_method_info_slots)
@@ -552,7 +549,7 @@ export(removeImage)
 export(removeMetaFeatures)
 export(removeMolecules)
 export(removeObs)
-export(removeObsNoCounts)
+export(removeObsZeroCounts)
 export(removeProcessedMatrix)
 export(removeSpatialAnnotations)
 export(removeSpatialOutliers)
@@ -574,6 +571,7 @@ export(rotateImage)
 export(rotateSpatialAnnotation)
 export(rotateSpatialAnnotations)
 export(rotateSpatialTrajectories)
+export(rotateTissueOutlineDf)
 export(rotate_coords_df)
 export(runAutoencoderDenoising)
 export(runBayesSpaceClustering)
