--- a/NAMESPACE
+++ b/NAMESPACE
@@ -629,6 +629,7 @@ export(setTrajectories)
 export(setTrajectory)
 export(setTsneDf)
 export(setUmapDf)
+export(setUpMetaVar)
 export(sgs_loess_control)
 export(shiftSpatialAnnotation)
 export(shinyModuleZoomingServer)
@@ -811,6 +812,7 @@ exportMethods(setScaleFactor)
 exportMethods(setSpatialAnnotation)
 exportMethods(setSpatialAnnotations)
 exportMethods(setSpatialMethod)
+exportMethods(setUpMetaVar)
 exportMethods(show)
 exportMethods(tagSpatialAnnotations)
 exportMethods(unloadImage)
